--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -14,8 +14,8 @@ public without sharing abstract class RollupCalculator {
   protected final Boolean isChangedFieldCalc;
   protected final SObjectType calcItemSObjectType;
 
-  protected Set<Object> distinctValues = new Set<Object>();
   protected List<Id> childrenIds = new List<Id>();
+  protected Set<Object> distinctValues = new Set<Object>();
   protected Rollup.Op op;
   protected String lookupKeyQuery;
   protected String lookupRecordKey;
@@ -135,7 +135,6 @@ public without sharing abstract class RollupCalculator {
       '\'' +
       (String.isBlank(metadata.CalcItemWhereClause__c) ? '' : ' AND (' + metadata.CalcItemWhereClause__c + ')');
     this.childrenIds = new List<Id>();
-    this.distinctValues = new Set<Object>();
   }
 
   public virtual Object getReturnValue() {
@@ -167,12 +166,11 @@ public without sharing abstract class RollupCalculator {
   public virtual void performRollup(List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
     // if we're already in a full recalc, we've got all the items we need already
     this.shouldTriggerFullRecalc = this.isFullRecalc == false;
+    List<WinnowResult> results = this.winnowItems(calcItems, oldCalcItems);
 
-    List<WinnowResult> winnowResults = this.winnowItems(calcItems, oldCalcItems);
-
-    for (Integer index = 0; index < winnowResults.size(); index++) {
-      this.isLastItem = index == winnowResults.size() - 1;
-      WinnowResult result = winnowResults[index];
+    for (Integer index = 0; index < results.size(); index++) {
+      this.isLastItem = index == results.size() - 1;
+      WinnowResult result = results[index];
       Boolean doesNotMatch = result.matchesCurrent == false;
       if (doesNotMatch && result.hasOldItem) {
         doesNotMatch = doesNotMatch && result.matchesOld == false;
@@ -184,10 +182,8 @@ public without sharing abstract class RollupCalculator {
         this.shouldTriggerFullRecalc = doesNotMatch;
       }
 
-      Object currentVal = result.currentValue;
-
       if (this.shouldShortCircuit) {
-        this.handleShortCircuit(currentVal);
+        this.handleShortCircuit(result);
         continue;
       } else if (this.isCDCUpdate) {
         // here we don't exclude items because the calc items have already been updated
@@ -255,7 +251,7 @@ public without sharing abstract class RollupCalculator {
       this.returnVal = this.calculateNewAggregateValue(this.op, this.childrenIds);
       // bail on calling setReturnValue below
       return;
-    } else if (this.shouldTriggerFullRecalc == false && winnowResults.isEmpty() && this.isFullRecalc == false) {
+    } else if (this.shouldTriggerFullRecalc == false && results.isEmpty() && this.isFullRecalc == false) {
       this.returnVal = this.defaultVal;
       return;
     }
@@ -285,19 +281,20 @@ public without sharing abstract class RollupCalculator {
   }
   public virtual void handleDeleteConcat(WinnowResult result) {
   }
-  protected virtual void handleShortCircuit(Object currentVal) {
+  protected virtual void handleShortCircuit(WinnowResult result) {
   }
   protected virtual void setReturnValue() {
   }
 
-  public class WinnowResult {
-    Boolean hasOldItem = false;
-    Boolean matchesCurrent = true;
-    Boolean matchesOld = false;
-    Object currentValue;
-    Object priorValue;
-    Boolean isReparented = false;
-    public SObject item;
+  @TestVisible
+  private class WinnowResult {
+    private Object currentValue;
+    private Object priorValue;
+    private Boolean hasOldItem = false;
+    private Boolean matchesCurrent = false;
+    private Boolean matchesOld = true;
+    private Boolean isReparented = false;
+    private final SObject item;
 
     public WinnowResult(SObject item) {
       this.item = item;
@@ -306,10 +303,17 @@ public without sharing abstract class RollupCalculator {
     public WinnowResult(SObject item, Schema.SObjectField token) {
       this(item);
       this.currentValue = item.get(token);
+      this.matchesCurrent = true;
     }
   }
 
   protected List<WinnowResult> winnowItems(List<SObject> items, Map<Id, SObject> oldCalcItems) {
+    List<RollupOrderBy__mdt> orderBys = this.metadata?.LimitAmount__c != null && this.metadata.RollupOrderBys__r.isEmpty()
+      ? new List<RollupOrderBy__mdt>{ new RollupOrderBy__mdt(FieldName__c = 'Id', Ranking__c = 0) }
+      : this.metadata.RollupOrderBys__r;
+    if (orderBys.isEmpty() == false) {
+      items.sort(new RollupCalcItemSorter(orderBys));
+    }
     List<WinnowResult> winnowedItems = new List<WinnowResult>();
     this.transformForMultiCurrencyOrgs(items);
     if (oldCalcItems.isEmpty() == false && this.isMultiCurrencyRollup) {
@@ -323,52 +327,44 @@ public without sharing abstract class RollupCalculator {
       if (item.Id != null) {
         this.childrenIds.add(item.Id);
       }
-      Boolean currentItemMatches = this.eval?.matches(item) != false;
-      Boolean shouldAddToWinnowedItems = currentItemMatches;
-      WinnowResult result = new WinnowResult(item);
-
-      SObject potentialOldItem = oldCalcItems.get(item.Id);
-      if (potentialOldItem != null) {
+      SObject transformedItem = this.getTransformedCalcItem(item);
+      WinnowResult result = new WinnowResult(transformedItem);
+      Boolean shouldAddToResults = this.eval?.matches(transformedItem) != false;
+      Boolean currentItemMatches = shouldAddToResults;
+      SObject potentialPriorItem = oldCalcItems.get(transformedItem.Id);
+      if (potentialPriorItem != null) {
         result.hasOldItem = true;
-        result.priorValue = this.getTransformedCalcItem(potentialOldItem).get(this.opFieldOnCalcItem);
-        result.matchesOld = this.eval?.matches(potentialOldItem) != false;
-        result.isReparented = this.isReparented(item, potentialOldItem);
+        result.isReparented = this.isReparented(transformedItem, potentialPriorItem);
+        result.matchesOld = this.eval?.matches(potentialPriorItem) != false;
+        result.priorValue = potentialPriorItem.get(this.opFieldOnCalcItem);
       }
-
       if (currentItemMatches == false) {
         switch on this.op {
           // not all downstream updates for old item matching when new item doesn't have been defined
           // and this switch statement is how other operations opt-in
           when UPDATE_COUNT, UPDATE_CONCAT_DISTINCT, UPDATE_CONCAT, UPDATE_SUM {
-            if (this.isChangedFieldCalc == false && result.matchesOld) {
-              shouldAddToWinnowedItems = true;
+            if (this.isChangedFieldCalc == false && result.hasOldItem && result.matchesOld) {
+              shouldAddToResults = true;
             }
           }
         }
       }
-      if (shouldAddToWinnowedItems) {
-        result.matchesCurrent = currentItemMatches;
-        Object currentVal = this.getTransformedCalcItem(item).get(this.opFieldOnCalcItem);
-        result.currentValue = currentVal;
+      if (shouldAddToResults) {
+        result.currentValue = transformedItem.get(this.opFieldOnCalcItem);
         if (this.isDistinct) {
-          if (this.distinctValues.contains(currentVal)) {
+          if (this.distinctValues.contains(result.currentValue)) {
             continue;
           }
-          this.distinctValues.add(currentVal);
+          this.distinctValues.add(result.currentValue);
         }
+        result.matchesCurrent = currentItemMatches;
         winnowedItems.add(result);
         if (this.op == Rollup.Op.SOME) {
           break;
         }
       }
     }
-    List<RollupOrderBy__mdt> orderBys = this.metadata.LimitAmount__c != null && this.metadata.RollupOrderBys__r.isEmpty()
-      ? new List<RollupOrderBy__mdt>{ new RollupOrderBy__mdt(FieldName__c = 'Id', Ranking__c = 0) }
-      : this.metadata.RollupOrderBys__r;
-    if (orderBys.isEmpty() == false) {
-      winnowedItems.sort(new RollupCalcItemSorter(orderBys));
-    }
-    if (this.metadata.LimitAmount__c != null) {
+    if (this.metadata?.LimitAmount__c != null) {
       // we can only safely remove the items after sorting
       while (winnowedItems.size() > this.metadata.LimitAmount__c && winnowedItems.isEmpty() == false) {
         winnowedItems.remove(winnowedItems.size() - 1);
@@ -385,7 +381,7 @@ public without sharing abstract class RollupCalculator {
   protected virtual Object calculateNewAggregateValue(Rollup.Op op, List<Object> objIds) {
     String operationName = Rollup.getBaseOperationName(op.name());
     String alias = operationName.toLowerCase() + 'Field';
-    List<SObject> aggregate = this.tryQuery(new Set<String>{ operationName + '(' + this.opFieldOnCalcItem + ')' + alias }, objIds);
+    List<SObject> aggregate = this.tryQuery(this.calcItemSObjectType, new Set<String>{ operationName + '(' + this.opFieldOnCalcItem + ')' + alias }, objIds);
     return aggregate.isEmpty() == false ? aggregate[0].get(alias) : this.defaultVal;
   }
 
@@ -400,7 +396,7 @@ public without sharing abstract class RollupCalculator {
       this.isRecursiveRecalc = true; // now we're cooking with gas
       Set<String> queryFields = this.getQueryFields();
 
-      List<SObject> allOtherItems = this.tryQuery(queryFields, objIds);
+      List<SObject> allOtherItems = this.tryQuery(this.calcItemSObjectType, queryFields, objIds);
       if (allOtherItems.isEmpty()) {
         // break out of recursion if there's nothing to calculate
         this.returnVal = this.defaultVal;
@@ -427,16 +423,14 @@ public without sharing abstract class RollupCalculator {
     return queryFields;
   }
 
-  protected List<SObject> tryQuery(Set<String> queryFields, Object bindVar) {
+  protected List<SObject> tryQuery(Schema.SObjectType sObjectType, Set<String> queryFields, Object bindVar) {
     List<SObject> results;
     try {
-      results = this.repo.setQuery(
-          RollupQueryBuilder.Current.getQuery(this.calcItemSObjectType, new List<String>(queryFields), 'Id', '!=', this.lookupKeyQuery)
-        )
+      results = this.repo.setQuery(RollupQueryBuilder.Current.getQuery(sObjectType, new List<String>(queryFields), 'Id', '!=', this.lookupKeyQuery))
         .setArg(bindVar)
         .get();
     } catch (System.QueryException qex) {
-      results = this.repo.setQuery(RollupQueryBuilder.Current.getQuery(this.calcItemSObjectType, new List<String>(queryFields), 'Id', '!=')).get();
+      results = this.repo.setQuery(RollupQueryBuilder.Current.getQuery(sObjectType, new List<String>(queryFields), 'Id', '!=')).get();
     }
     return results;
   }
@@ -479,6 +473,7 @@ public without sharing abstract class RollupCalculator {
 
     public override void setDefaultValues(String lookupRecordKey, Object priorVal) {
       super.setDefaultValues(lookupRecordKey, priorVal);
+      this.distinctValues = new Set<Object>();
       this.isIdCount = this.opFieldOnCalcItem.getDescribe().getName() == 'Id';
       Object defaultVal = RollupFieldInitializer.Current.getDefaultValue(opFieldOnLookupObject);
       if (defaultVal != 0 && this.returnVal != defaultVal && this.isIdCount == false) {
@@ -490,9 +485,9 @@ public without sharing abstract class RollupCalculator {
       this.returnVal = this.distinctValues.size() == 0 ? this.defaultVal : Decimal.valueOf(this.distinctValues.size());
     }
 
-    protected override void handleShortCircuit(Object currentVal) {
-      if (currentVal != null && this.op != Rollup.Op.DELETE_COUNT_DISTINCT) {
-        this.distinctValues.add(currentVal);
+    protected override void handleShortCircuit(WinnowResult result) {
+      if (result.currentValue != null && this.op != Rollup.Op.DELETE_COUNT_DISTINCT) {
+        this.distinctValues.add(result.currentValue);
       }
     }
 
@@ -509,7 +504,7 @@ public without sharing abstract class RollupCalculator {
 
     public override void handleUpdateCountDistinct(WinnowResult result) {
       this.shouldShortCircuit = true;
-      this.handleShortCircuit(result.currentValue);
+      this.handleShortCircuit(result);
     }
 
     protected override Object calculateNewAggregateValue(Rollup.Op op, List<Object> objIds) {
@@ -579,13 +574,13 @@ public without sharing abstract class RollupCalculator {
       }
     }
 
-    protected virtual Decimal getNumericValue(Object currentVal) {
-      return this.getDecimalOrDefault(currentVal);
+    protected virtual Decimal getNumericValue(Object currentValue) {
+      return this.getDecimalOrDefault(currentValue);
     }
 
     protected virtual Decimal getNumericChangedValue(WinnowResult result) {
       Decimal newVal = this.getNumericValue(result.currentValue);
-      Decimal oldVal = this.getNumericValue(result.priorValue);
+      Decimal oldVal = result.hasOldItem ? this.getNumericValue(result.priorValue) : 0;
 
       if (this.isFullRecalc && result.matchesCurrent) {
         return newVal;
@@ -613,19 +608,19 @@ public without sharing abstract class RollupCalculator {
       return this.returnVal;
     }
 
-    protected override void handleShortCircuit(Object currentVal) {
+    protected override void handleShortCircuit(WinnowResult result) {
       switch on this.op {
         when UPDATE_MAX {
           // re-maxing by way of query has occurred, but is it **correct**?
-          // if one of the other updated calcItems is numerically superior, assign the new max
-          Decimal newVal = this.getNumericValue(currentVal);
+          // if one of the other updated children is numerically superior, assign the new max
+          Decimal newVal = this.getNumericValue(result.currentValue);
           if (newVal > returnDecimal) {
             this.returnDecimal = newVal;
           }
         }
         when UPDATE_MIN {
-          // re-"min"-ing has occurred by way of query, but is an in-memory calcItem even less?
-          Decimal newVal = this.getNumericValue(currentVal);
+          // re-"min"-ing has occurred by way of query, but is an in-memory child even less?
+          Decimal newVal = this.getNumericValue(result.currentValue);
           if (newVal < returnDecimal) {
             this.returnDecimal = newVal;
           }
@@ -661,7 +656,7 @@ public without sharing abstract class RollupCalculator {
 
     public override void handleUpdateMinOrMax(WinnowResult result) {
       Decimal newVal = this.getNumericValue(result.currentValue);
-      Decimal thisPriorVal = this.getNumericValue(result.priorValue);
+      Decimal thisPriorVal = this.getNumericValue(result.hasOldItem ? result.priorValue : result.currentValue);
       if (
         thisPriorVal != 0 &&
         thisPriorVal == this.returnDecimal &&
@@ -842,8 +837,8 @@ public without sharing abstract class RollupCalculator {
       return potentialReturnVal < 0 ? 0.00 : potentialReturnVal;
     }
 
-    protected override Decimal getNumericValue(Object currentVal) {
-      return currentVal != null ? 1.00 : 0.00;
+    protected override Decimal getNumericValue(Object value) {
+      return value != null ? 1.00 : 0.00;
     }
 
     protected override Decimal getNumericChangedValue(WinnowResult result) {
@@ -870,6 +865,10 @@ public without sharing abstract class RollupCalculator {
       }
       return retVal;
     }
+  }
+
+  private static Boolean isConcatDistinct(Rollup.Op op) {
+    return op.name().contains(Rollup.Op.CONCAT_DISTINCT.name());
   }
 
   private without sharing abstract class DelimiterCalculator extends RollupCalculator {
@@ -906,11 +905,11 @@ public without sharing abstract class RollupCalculator {
       Schema.SObjectField lookupKeyField
     ) {
       super(op, opFieldOnCalcItem, opFieldOnLookupObject, metadata, lookupKeyField);
-      this.isConcatDistinct = this.op.name().contains(Rollup.Op.CONCAT_DISTINCT.name());
+      this.isConcatDistinct = isConcatDistinct(this.op);
     }
 
     public virtual override void setDefaultValues(String lookupRecordKey, Object priorVal) {
-      super.setDefaultValues(lookupRecordKey, this.isConcatDistinct ? '' : priorVal);
+      super.setDefaultValues(lookupRecordKey, isConcatDistinct(this.op) ? '' : priorVal);
       if (this.returnVal instanceof String) {
         this.stringVal = (String) this.returnVal;
       }
@@ -933,16 +932,16 @@ public without sharing abstract class RollupCalculator {
       this.returnVal = this.stringVal;
     }
 
-    protected override void handleShortCircuit(Object currentVal) {
+    protected override void handleShortCircuit(WinnowResult result) {
       switch on this.op {
         when UPDATE_MAX, UPDATE_MIN {
-          String newVal = String.valueOf(currentVal);
+          String newVal = String.valueOf(result.currentValue);
           if (this.isTrueFor(newVal, this.stringVal)) {
             this.stringVal = newVal;
           }
         }
         when DELETE_CONCAT_DISTINCT {
-          this.handleConcatDistinctDelete(currentVal);
+          this.handleConcatDistinctDelete(result);
         }
       }
     }
@@ -970,7 +969,7 @@ public without sharing abstract class RollupCalculator {
         return;
       } else if (this.isConcatDistinct) {
         this.shouldShortCircuit = this.op.name().contains('DELETE');
-        this.handleConcatDistinctDelete(existingVal);
+        this.handleConcatDistinctDelete(result);
       } else {
         this.stringVal = this.replaceWithDelimiter(this.stringVal, existingVal, '');
       }
@@ -989,7 +988,7 @@ public without sharing abstract class RollupCalculator {
 
     public override void handleUpdateMinOrMax(WinnowResult result) {
       String newVal = String.valueOf(result.currentValue);
-      String priorString = String.valueOf(result.hasOldItem ? result.priorValue : newVal);
+      String priorString = String.valueOf(result.hasOldItem ? result.priorValue : result.currentValue);
 
       if (
         (this.op.name().contains(Rollup.Op.MAX.name()) && priorString == this.stringVal && newVal <= this.stringVal) ||
@@ -999,7 +998,7 @@ public without sharing abstract class RollupCalculator {
       ) {
         this.shouldShortCircuit = true;
         Object potentialReturnValue = this.calculateNewAggregateValue(this.op, this.childrenIds);
-        this.stringVal = potentialReturnValue == null ? '' : String.valueOf(potentialReturnValue);
+        this.stringVal = String.valueOf(potentialReturnValue ?? '');
       } else if (this.isTrueFor(newVal, this.stringVal)) {
         this.stringVal = newVal;
       }
@@ -1065,10 +1064,11 @@ public without sharing abstract class RollupCalculator {
       return existingVal += this.concatDelimiter + replacementVal;
     }
 
-    private void handleConcatDistinctDelete(Object currentVal) {
+    private void handleConcatDistinctDelete(WinnowResult result) {
       // we do a replace first, in case this is a reparenting operation
-      this.stringVal = this.replaceWithDelimiter(this.stringVal, (String) currentVal, '');
-      // we have to wait till it's the last iteration; this is what ensures that all of the deleted items are excluded
+      this.stringVal = this.replaceWithDelimiter(this.stringVal, (String) result.currentValue, '');
+      // we have to wait till it's the last iteration; this is what ensures that all of the deleted
+      // items are accounted for in this.childrenIds (for proper exclusion)
       if (this.isLastItem) {
         List<SObject> relatedItems = this.repo.setArg(this.childrenIds)
           .setQuery(
@@ -1156,9 +1156,9 @@ public without sharing abstract class RollupCalculator {
     }
     public override void performRollup(List<SObject> calcItems, Map<Id, SObject> oldCalcItems) {
       List<SObject> applicableCalcItems = this.op == Rollup.Op.DELETE_AVERAGE ? new List<SObject>() : calcItems;
-      List<WinnowResult> winnowResults = this.winnowItems(applicableCalcItems, oldCalcItems);
+      List<WinnowResult> results = this.winnowItems(applicableCalcItems, oldCalcItems);
       Decimal oldSum;
-      Decimal denominator = Decimal.valueOf(winnowResults.size());
+      Decimal denominator = Decimal.valueOf(results.size());
       if (this.isFullRecalc == false || this.hasAlreadyBeenFullRecalcUpdated(oldCalcItems)) {
         denominator += this.repo.setQuery(RollupQueryBuilder.Current.getQuery(this.calcItemSObjectType, new List<String>(), 'Id', '!=', this.lookupKeyQuery))
           .setArg(calcItems)
@@ -1167,9 +1167,8 @@ public without sharing abstract class RollupCalculator {
       }
 
       Decimal newSum = 0.00;
-      for (WinnowResult result : winnowResults) {
-        Object potentialDecimal = result.currentValue;
-        newSum += (Decimal) potentialDecimal ?? 0.00;
+      for (WinnowResult result : results) {
+        newSum += (Decimal) result.currentValue ?? 0.00;
       }
 
       Decimal average = (Decimal) this.defaultVal;
@@ -1255,7 +1254,7 @@ public without sharing abstract class RollupCalculator {
       this.occurrenceToCount = new Map<Object, Integer>();
 
       if (this.hasAlreadyBeenFullRecalcUpdated(oldCalcItems)) {
-        calcItems.addAll(this.tryQuery(this.getQueryFields(), calcItems));
+        calcItems.addAll(this.tryQuery(this.calcItemSObjectType, this.getQueryFields(), calcItems));
       }
       this.largestCountPointer = -1;
       this.returnVal = this.defaultVal;
@@ -1263,10 +1262,7 @@ public without sharing abstract class RollupCalculator {
 
       for (WinnowResult result : results) {
         Object value = result.currentValue;
-        Integer localCount = 0;
-        if (this.occurrenceToCount.containsKey(value)) {
-          localCount = this.occurrenceToCount.get(value);
-        }
+        Integer localCount = this.occurrenceToCount.get(value) ?? 0;
         this.occurrenceToCount.put(value, ++localCount);
         if (this.largestCountPointer < localCount) {
           this.largestCountPointer = localCount;
@@ -1329,7 +1325,7 @@ public without sharing abstract class RollupCalculator {
 
   private without sharing class GroupByCalculator extends DelimiterCalculator {
     private final GroupingFormatter formatter;
-    private final System.Comparator<WinnowResult> sorter;
+    private final System.Comparator<SObject> sorter;
     private final RollupCalculator innerCalculator;
     private final List<String> fieldNames = new List<String>();
     private GroupByCalculator(
@@ -1360,8 +1356,8 @@ public without sharing abstract class RollupCalculator {
       this.innerCalculator.parentIsoCode = this.parentIsoCode;
       this.innerCalculator.isMultiCurrencyRollup = this.isMultiCurrencyRollup;
 
+      calcItems.sort(this.sorter);
       List<WinnowResult> results = this.winnowItems(calcItems, oldCalcItems);
-      results.sort(this.sorter);
 
       Map<String, List<SObject>> groupingStringToItems = new Map<String, List<SObject>>();
       for (WinnowResult result : results) {
@@ -1495,7 +1491,7 @@ public without sharing abstract class RollupCalculator {
   private static Object getDefaultRecalculationValue(Rollup__mdt meta) {
     // some operations could possibly use either default value
     // we also have to cast to Object to avoid the compilation error:
-    // "Incompatible types in null coalescing operator: Decimal, String"
+    // "Incompatible types in null coalesce operator: Decimal, String"
     return (Object) meta.FullRecalculationDefaultNumberValue__c ?? (Object) meta.FullRecalculationDefaultStringValue__c;
   }
 }
