--- a/extra-tests/classes/RollupCalcItemSorterTests.cls
+++ b/extra-tests/classes/RollupCalcItemSorterTests.cls
@@ -12,18 +12,18 @@ private class RollupCalcItemSorterTests {
     Date severalDaysAgo = System.today().addDays(-2);
     Opportunity expectedFirstItem = new Opportunity(Amount = null, CloseDate = severalDaysAgo);
     Opportunity expectedSecondItem = new Opportunity(Amount = 1, CloseDate = severalDaysAgo);
-    List<RollupCalculator.WinnowResult> oppsToSort = new List<RollupCalculator.WinnowResult>{
-      new RollupCalculator.WinnowResult(new Opportunity(Amount = 1, CloseDate = System.today())),
+    List<Opportunity> oppsToSort = new List<Opportunity>{
+      new Opportunity(Amount = 1, CloseDate = System.today()),
       // this record should essentially be thrown out of sorting since it "loses" on the first ordering,
       // which is on Amount
-      new RollupCalculator.WinnowResult(new Opportunity(Amount = 3, CloseDate = severalDaysAgo.addDays(-1))),
-      new RollupCalculator.WinnowResult(expectedSecondItem),
-      new RollupCalculator.WinnowResult(expectedFirstItem)
+      new Opportunity(Amount = 3, CloseDate = severalDaysAgo.addDays(-1)),
+      expectedSecondItem,
+      expectedFirstItem
     };
     oppsToSort.sort(sorter);
 
-    System.assertEquals(expectedFirstItem, oppsToSort[0].item);
-    System.assertEquals(expectedSecondItem, oppsToSort[1].item);
+    System.assertEquals(expectedFirstItem, oppsToSort[0]);
+    System.assertEquals(expectedSecondItem, oppsToSort[1]);
   }
 
   @IsTest
@@ -41,18 +41,13 @@ private class RollupCalcItemSorterTests {
     Opportunity expectedThirdItem = new Opportunity(Amount = 2, CloseDate = today, Name = 'a');
     Opportunity expectedSecondItem = new Opportunity(Amount = 1, CloseDate = today, Name = 'c');
     Opportunity expectedFourthItem = new Opportunity(Amount = 2, CloseDate = today.addDays(1), Name = 'a');
-    List<RollupCalculator.WinnowResult> oppsToSort = new List<RollupCalculator.WinnowResult>{
-      new RollupCalculator.WinnowResult(expectedSecondItem),
-      new RollupCalculator.WinnowResult(expectedFourthItem),
-      new RollupCalculator.WinnowResult(expectedThirdItem),
-      new RollupCalculator.WinnowResult(expectedFirstItem)
-    };
+    List<Opportunity> oppsToSort = new List<Opportunity>{ expectedSecondItem, expectedFourthItem, expectedThirdItem, expectedFirstItem };
     oppsToSort.sort(sorter);
 
-    System.assertEquals(expectedFirstItem, oppsToSort[0].item);
-    System.assertEquals(expectedSecondItem, oppsToSort[1].item);
-    System.assertEquals(expectedThirdItem, oppsToSort[2].item);
-    System.assertEquals(expectedFourthItem, oppsToSort[3].item);
+    System.assertEquals(expectedFirstItem, oppsToSort[0]);
+    System.assertEquals(expectedSecondItem, oppsToSort[1]);
+    System.assertEquals(expectedThirdItem, oppsToSort[2]);
+    System.assertEquals(expectedFourthItem, oppsToSort[3]);
   }
 
   @IsTest
@@ -67,15 +62,15 @@ private class RollupCalcItemSorterTests {
     Date severalDaysAgo = System.today().addDays(-2);
     Opportunity expectedFirstItem = new Opportunity(Amount = 1, CloseDate = System.today());
     Opportunity expectedSecondItem = new Opportunity(Amount = 3, CloseDate = severalDaysAgo.addDays(-1));
-    List<RollupCalculator.WinnowResult> oppsToSort = new List<RollupCalculator.WinnowResult>{
-      new RollupCalculator.WinnowResult(new Opportunity(Amount = 3, CloseDate = severalDaysAgo.addDays(-1))),
-      new RollupCalculator.WinnowResult(expectedSecondItem),
-      new RollupCalculator.WinnowResult(expectedFirstItem)
+    List<Opportunity> oppsToSort = new List<Opportunity>{
+      new Opportunity(Amount = 3, CloseDate = severalDaysAgo.addDays(-1)),
+      expectedSecondItem,
+      expectedFirstItem
     };
     oppsToSort.sort(sorter);
 
-    System.assertEquals(expectedFirstItem, oppsToSort[0].item);
-    System.assertEquals(expectedSecondItem, oppsToSort[1].item);
+    System.assertEquals(expectedFirstItem, oppsToSort[0]);
+    System.assertEquals(expectedSecondItem, oppsToSort[1]);
   }
 
   @IsTest
@@ -93,16 +88,12 @@ private class RollupCalcItemSorterTests {
     Opportunity expectedSecondItem = new Opportunity(Amount = 5, CloseDate = today);
     Opportunity expectedThirdItem = new Opportunity(Amount = 1, CloseDate = today);
 
-    List<RollupCalculator.WinnowResult> oppsToSort = new List<RollupCalculator.WinnowResult>{
-      new RollupCalculator.WinnowResult(expectedThirdItem),
-      new RollupCalculator.WinnowResult(expectedFirstItem),
-      new RollupCalculator.WinnowResult(expectedSecondItem)
-    };
+    List<Opportunity> oppsToSort = new List<Opportunity>{ expectedThirdItem, expectedFirstItem, expectedSecondItem };
     oppsToSort.sort(sorter);
 
-    System.assertEquals(expectedFirstItem, oppsToSort[0].item);
-    System.assertEquals(expectedSecondItem, oppsToSort[1].item);
-    System.assertEquals(expectedThirdItem, oppsToSort[2].item);
+    System.assertEquals(expectedFirstItem, oppsToSort[0]);
+    System.assertEquals(expectedSecondItem, oppsToSort[1]);
+    System.assertEquals(expectedThirdItem, oppsToSort[2]);
   }
 
   @IsTest
@@ -110,16 +101,16 @@ private class RollupCalcItemSorterTests {
     RollupCalcItemSorter sorter = new RollupCalcItemSorter(new List<RollupOrderBy__mdt>{ new RollupOrderBy__mdt(Ranking__c = 0, FieldName__c = 'Industry') });
 
     List<Schema.PicklistEntry> picklistEntries = Account.Industry.getDescribe().getPicklistValues();
-    List<RollupCalculator.WinnowResult> accs = new List<RollupCalculator.WinnowResult>();
+    List<Account> accs = new List<Account>();
 
     for (Integer reverseIndex = picklistEntries.size() - 1; reverseIndex >= 0; reverseIndex--) {
       Schema.PicklistEntry entry = picklistEntries[reverseIndex];
-      accs.add(new RollupCalculator.WinnowResult(new Account(Name = entry.getValue(), Industry = entry.getValue())));
+      accs.add(new Account(Name = entry.getValue(), Industry = entry.getValue()));
     }
     accs.sort(sorter);
 
     for (Integer index = 0; index < accs.size(); index++) {
-      System.assertEquals(picklistEntries[index].getValue(), accs[index].item.get(Account.Industry), 'Account at index: ' + index + ' should have matched');
+      System.assertEquals(picklistEntries[index].getValue(), accs[index].Industry, 'Account at index: ' + index + ' should have matched');
     }
   }
 
@@ -138,14 +129,11 @@ private class RollupCalcItemSorterTests {
       }
     );
 
-    List<RollupCalculator.WinnowResult> opps = new List<RollupCalculator.WinnowResult>{
-      new RollupCalculator.WinnowResult(second),
-      new RollupCalculator.WinnowResult(opp)
-    };
+    List<Opportunity> opps = new List<Opportunity>{ second, opp };
     opps.sort(sorter);
 
-    System.assertEquals(opp, opps[0].item);
-    System.assertEquals(second, opps[1].item);
+    System.assertEquals(opp, opps[0]);
+    System.assertEquals(second, opps[1]);
   }
 
   @IsTest
@@ -156,12 +144,7 @@ private class RollupCalcItemSorterTests {
 
     Opportunity expectedFirstItem = new Opportunity(Amount = null);
     Opportunity expectedSecondItem = new Opportunity(Amount = 1);
-    List<RollupCalculator.WinnowResult> oppsToSort = new List<RollupCalculator.WinnowResult>{
-      new RollupCalculator.WinnowResult(new Opportunity(Amount = 1)),
-      new RollupCalculator.WinnowResult(new Opportunity(Amount = 3)),
-      new RollupCalculator.WinnowResult(expectedSecondItem),
-      new RollupCalculator.WinnowResult(expectedFirstItem)
-    };
+    List<Opportunity> oppsToSort = new List<Opportunity>{ new Opportunity(Amount = 1), new Opportunity(Amount = 3), expectedSecondItem, expectedFirstItem };
     oppsToSort.sort(sorter);
 
     System.assert(true, 'Should make it here');
@@ -169,24 +152,24 @@ private class RollupCalcItemSorterTests {
 
   @IsTest
   static void sortsFieldNames() {
-    List<RollupCalculator.WinnowResult> itemsToSort = new List<RollupCalculator.WinnowResult>{
-      new RollupCalculator.WinnowResult(new Opportunity(StageName = 'Two')),
-      new RollupCalculator.WinnowResult(new Opportunity(StageName = 'Uno Reverse Card')),
-      new RollupCalculator.WinnowResult(new Opportunity(StageName = 'Two')),
-      new RollupCalculator.WinnowResult(new Opportunity()),
-      new RollupCalculator.WinnowResult(new Opportunity(StageName = 'Z')),
-      new RollupCalculator.WinnowResult(new Opportunity(StageName = 'One')),
-      new RollupCalculator.WinnowResult(new Opportunity(StageName = 'One'))
+    List<Opportunity> itemsToSort = new List<Opportunity>{
+      new Opportunity(StageName = 'Two'),
+      new Opportunity(StageName = 'Uno Reverse Card'),
+      new Opportunity(StageName = 'Two'),
+      new Opportunity(),
+      new Opportunity(StageName = 'Z'),
+      new Opportunity(StageName = 'One'),
+      new Opportunity(StageName = 'One')
     };
 
     itemsToSort.sort(new RollupCalcItemSorter(new List<String>{ Opportunity.Name.getDescribe().getName(), Opportunity.StageName.getDescribe().getName() }));
 
-    System.assertEquals(null, itemsToSort.get(0).item.get(Opportunity.StageName));
-    System.assertEquals('One', itemsToSort.get(1).item.get(Opportunity.StageName));
-    System.assertEquals('One', itemsToSort.get(2).item.get(Opportunity.StageName));
-    System.assertEquals('Two', itemsToSort.get(3).item.get(Opportunity.StageName));
-    System.assertEquals('Two', itemsToSort.get(4).item.get(Opportunity.StageName));
-    System.assertEquals('Uno Reverse Card', itemsToSort.get(5).item.get(Opportunity.StageName));
-    System.assertEquals('Z', itemsToSort.get(6).item.get(Opportunity.StageName));
+    System.assertEquals(null, itemsToSort.get(0).StageName);
+    System.assertEquals('One', itemsToSort.get(1).StageName);
+    System.assertEquals('One', itemsToSort.get(2).StageName);
+    System.assertEquals('Two', itemsToSort.get(3).StageName);
+    System.assertEquals('Two', itemsToSort.get(4).StageName);
+    System.assertEquals('Uno Reverse Card', itemsToSort.get(5).StageName);
+    System.assertEquals('Z', itemsToSort.get(6).StageName);
   }
 }
